format page a little bit

--- a/wifi.css
+++ b/wifi.css
@@ -13,6 +13,10 @@ text {
     font-size: 12px;
 }
 
+text.time-legend {
+    text-anchor: start;
+}
+
 .node text {
     text-anchor: end;
     font-size: 12px;
