make visualization standalone

--- a/css/wifi.css
+++ b/css/wifi.css
@@ -1,13 +1,79 @@
-circle {
-    stroke: #7289D3;
-    stroke-width: 1px;
+/*
+body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #DAE3E7;
+}
+*/
+
+/*
+.content-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+*/
+
+.content-container {
+    padding: 20px;
 }
 
-circle:hover {
-    stroke: #596CA3;
+@media (max-height: 500px) {
+    .content-container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+}
+
+@media (max-width: 500px) {
+    .content-container {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
+
+
+/*
+circle {
+    stroke: #DBDBD9;
+    stroke-width: 1px;
+}
+*/
+
+.recent-node {
+    stroke: #DBDBD9;
     stroke-width: 2px;
 }
-      
+
+.wifi-access-point {
+    fill: #50DD30;
+}
+
+.wifi-device {
+    fill: #3081DD;
+}
+
+.wifi-hybrid {
+    fill: #40AF87;
+}
+
+.wifi-unknown {
+    fill: #B2B1B0;
+}
+
+.recent-node:hover {
+    stroke: #F2E646;
+    stroke-width: 6px;
+}
+
+/*
+circle:hover {
+    stroke: #ADAD66;
+    stroke-width: 3px;
+}
+*/
+     
 text {
     text-anchor: start;
     font-size: 12px;
@@ -17,9 +83,11 @@ text.time-legend {
     text-anchor: start;
 }
 
-.user-summary-legend {
+.device-labels, .user-summary-legend {
     text-anchor: middle;
 }
+
+
 
 /*
 .node text {
@@ -36,3 +104,5 @@ text.time-legend {
 .node:hover text {
     opacity: 1;
 }
+
+
