--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,22 +1,34 @@
+/*
 body {
-    padding-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #DAE3E7;
 }
+*/
+
+
+/*i
+.content-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+*/
 
 .content-container {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 20px;
 }
 
-.content-top {
-    padding-top: 5px;
-    padding-bottom: 5px;
+@media (max-height: 500px) {
+    .content-container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
 }
 
-.content-bottom {
-    padding-bottom: 5px;
-}
 
-@media (max-width: 768px) {
+@media (max-width: 500px) {
     .content-container {
         padding-left: 0px;
         padding-right: 0px;
